--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const str = "Hello World";
 ---
 
 <html lang="en">
@@ -11,6 +11,6 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>{str}</h1>
 	</body>
 </html>
