--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -1,6 +1,6 @@
 ---
 import { getImage } from "astro:assets";
-import { OG, SEO, SITE, baseLocalization } from "@data/constants";
+import { OG, SEO, SITE, baseLocalization } from "@/data/config";
 import faviconSvgSrc from "@images/icon.svg";
 import faviconSrc from "@images/icon.png";
 
