--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
 import MainLayout from "@/layouts/MainLayout.astro";
 import Btn404 from "@components/ui/buttons/Btn404.astro";
-import { SITE } from "@data/constants";
+import { SITE } from "@/data/config";
 
 // Define types for translations
 type TranslationKeys = 'en' | 'ua' | 'ru';
