--- a/src/components/Meta.astro
+++ b/src/components/Meta.astro
@@ -91,10 +91,7 @@ const appleTouchIcon = await getImage({
 
 <!-- Links to the webmanifest and sitemap -->
 <link rel="manifest" href="/manifest.json" />
-
-<!-- TODO: Configure Site Map -->
-<!-- https://docs.astro.build/en/guides/integrations-guide/sitemap/ -->
-<!-- <link rel="sitemap" href="/sitemap-index.xml" /> -->
+<link rel="sitemap" href="/sitemap-index.xml" />
 
 <!-- Links for favicons -->
 <link href="/favicon.ico" rel="icon" sizes="any" type="image/x-icon" />
@@ -103,6 +100,3 @@ const appleTouchIcon = await getImage({
 <link href={appleTouchIcon.src} rel="apple-touch-icon" />
 <link href={appleTouchIcon.src} rel="shortcut icon" />
 
-<!-- Set theme color -->
-<!-- TODO: Check Theme-color -->
-<!-- <meta name="theme-color" content="#FFF" /> -->
